--- a/environments/py3.7/m3-4.6.14/jaspy3.7-m3-4.6.14-r20190612/initial.yml
+++ b/environments/py3.7/m3-4.6.14/jaspy3.7-m3-4.6.14-r20190612/initial.yml
@@ -4,84 +4,189 @@ channels:
     - defaults
 dependencies:
     - arpack
-    - backports.ssl
+    - astral
+#    - atlas - NOT AVAILABLE (NA)
+#    - atlas-devel - NA
     - basemap
+#    - bbcp - NA
+#    - bbcp-config - NA
     - blas
     - boto3
+    - botocore
+    - boost
+#    - boost-devel
     - cartopy
+    - certifi
+    - chardet
     - cdo
     - cftime
     - cf_units
-#    - cis
+    - cis
     - cloudpickle
+#    - mip6-cmor-tables - EXCLUDED: BETTER IN SUB-ENVS (EXS) 
+#    - cmor-libs - EXS
+#coda: see: r-coda
     - cycler
     - cython
     - dask
+#ddd: see: pip:python-ddd
     - descartes
-#    - descartes==1.1.0
+#diffuse
+#dvipng
+    - eccodes
+#eccodes-devel
+#eccodes-fortran
+#eccodes-python27: see: python-eccodes
+#    - ecmwf-api-client: FAIL: ecmwf-api-client -> python=3.5
+    - emacs
+#emacs-common-ess
+#emacs-ess-el
+#emacs-ess
+#emacs-gnuplot
     - emcee
+#emos
+#    - enum34: FAIL: enum34 -> python[version='>=2.7,<2.8.0a0']
     - eofs
+#    - esgf-pyclient: Need PULL REQUEST to be accepted on conda-forge
     - esmf
+#esmf-doc
+#ferret: see: pyferret
     - fftw
+#fftw-devel ? needed?
+#firefox
+    - flex
     - filelock
     - fiona
     - gdal
+#    - gcc: FAIL: conflict
+#gcc-gfortran
     - geopandas
     - geos
+#geos-devel
     - git
-#    - gnuplot
+#gitk
+#glibc-static
+    - glib
+    - gnuplot
+#gpsbabel
+#grads
+    - graphicsmagick
+#GraphicsMagick-c++
     - graphviz
+#graphviz-python27: see: python-graphviz
+#grass
+#grass-devel
+#grass-libs
+#grib_api-devel
+#grib_api-fortran
+#grib_api
+#grib_api-python27
     - gsl
-#    - gsl==2.2.1
+#gsl-devel
+#gsl-static
+    - gtk2
+#gtk2-devel
+#gv
     - h5py
     - hdf5
+#hdf5-devel
     - hdfeos2
     - hdfeos5
-    - ImageHash
+    - httplib2
+    - idna
+    - ilamb
+    - imagehash
     - imagemagick
     - ipython
     - iris
+    - iris-grib
     - iris-sample-data
+    - jags
     - jasper
+#jasper-devel
     - jinja2
     - jmespath
     - joblib
     - jug
     - kiwisolver
+#ksh
     - lapack
+#lapack-devel
     - latexcodec
+#leafpad
     - libcdms
+#libcrayutil
+    - libcurl
+#libcurl-devel
+#libRmath-devel
+#libRmath
+    - llvmdev
+#lxterminal
     - libdrs
+    - libgcc
+    - libgcc-ng
+    - libgdal
+    - libmo_unpack
     - libuuid
+#libuuid-devel
     - locket
     - markupsafe
     - matplotlib
-#    - matplotlib==2.2
+#    - mercurial: FAIL: mercurial -> python[version='>=2.7,<2.8.0a0']
     - mo_pack
+#mo_unpack: see: libmo_unpack
     - mock
     - mpi4py
     - mpich
     - mpmath
+#mtk
+#mtk-devel
+#mtk-python27
+#ncBrowse
+#nccmp: see: netcdf4
     - ncl
     - nco
+#nco-devel
     - nc-time-axis
+#ncview
+#nedit
     - netcdf4
-#    - netcdf4==1.4.0
+#netcdf-devel: see: netcdf4
+#netcdf: see: netcdf4
     - netcdf-cxx4
+#netcdf-c++-devel: see: netcdf-cxx4
+#netcdf-c++: see: netcdf-cxx4
     - netcdf-fortran
-#    - netcdftime
+#netcdf-fortran-devel: see: netcdf-fortran
     - nose
     - numpy
-#    - numpy==1.14
-#    - octave
+    - octave
+#octave-devel
+#octave-doc
+#octave-netcdf
+#octave-octcdf
+#p7zip
     - packaging
     - pandas
+    - parallel
     - partd
     - patsy
+#pdftk: see: pip:pypdftk
     - pep8
     - perl
-    - pillow
+#perl-core
+#perl-devel
+#perl-Image-ExifTool
+    - perl-xml-parser
     - pillow 
+    - pip
+    - postgresql
+#postgresql-devel
+#proj-devel
+#proj-epsg
+#proj
+#proj-nad
+#proj-static
     - psutil
     - psycopg2
     - pyaml
@@ -89,6 +194,7 @@ dependencies:
     - pycairo
     - pycodestyle
     - pydap
+    - pyferret
     - pygments
     - pygobject
     - pygrib
@@ -97,42 +203,215 @@ dependencies:
     - pylint
     - pyparsing
     - pyproj
+    - pyside2
     - pyshp
     - pyspharm
     - pystan
     - pytest
+#python27-astral: see: Here As Package (without "python27-")
+#python27-backports-common: NA
+#python27-backports-functools_lru_cache: NA
+#python27-backports-ssl_match_hostname: NA
+#python27-basemap: HAP
+#python27-biggus: deprecated
+#python27-boto3: HAP
+#python27-botocore: HAP
+#python27-cartopy: HAP
+#python27-ccplot: see: pip:ccplot
+#python27-cdat_lite: deprecated
+#python27-cerbere
+#python27-certifi: HAP
+#python27-cf-checker: see: pip:cfchecker
+#python27-cf: waiting py3 version
+#python27-cf-plot: waiting py3 version
+#python27-cftime: HAP
+#python27-cf_units: HAP
+#python27-cf-units: duplicate?
+#python27-cf-view: waiting py3 version
+#python27-chardet: HAP
+#python27-cis: HAP
+#python27-cloudpickle
+#python27-cmor: EXS
+#python27-cycler: HAP
+#python27-Cython: HAP
+#python27-dask: HAP
+#python27-descartes: HAP
+#python27-ecmwf-api-client: HAP
+#python27-emcee: HAP
+#python27-enum34: HAP
+#python27-eofs: HAP
+#python27-esgf-pyclient: HAP
+#python27-filelock: HAP
+#python27-Fiona: HAP
+#python27-geopandas: HAP
+#python27-h5py: HAP
+#python27-httplib2: HAP
+#python27-idna: HAP
+#python27-ilamb
+#python27-ImageHash
+#python27-ipython: HAP
+#python27-iris-grib: HAP
+#python27-iris: HAP
+#python27-iris_sample_data: HAP
+#python27-jinja2: HAP
+#python27-jmespath: HAP
+#python27-joblib: HAP
+#python27-Jug: HAP
+#python27-kiwisolver: HAP
+#python27-latexcodec: HAP
+#python27-locket: HAP
+#python27-MarkupSafe: HAP
+#python27-matplotlib: HAP
+#python27-mock: HAP
+#python27-mo_pack: HAP
+#python27-mpi4py-mpich: see:mpi4py
+#python27-mpmath: HAP
+#python27-nappy: see: pip:nappy
+#python27-nc-time-axis: HAP
+#python27-netCDF4: HAP
+#python27-nose: HAP
+#python27-numpy: HAP
+#python27-packaging: HAP
+#python27-pandas: HAP
+#python27-partd: HAP
+#python27-patsy: HAP
+#python27-pep8: HAP
+#python27-PIL: see:pillow
+#python27-Pillow: HAP
+#python27-psutil: HAP
+#python27-psycopg2: HAP
+#python27-pybtex: HAP
+#python27-pycairo: HAP
+#python27-pycodestyle: HAP
+#python27-Pydap: HAP
+#python27-pygeode: see: pip:pygeode
+#python27-Pygments: HAP
+#python27-pygobject2: HAP
+#python27-pygrib: HAP
+#python27-pygtk2: see:gtk2
+#python27-pygtk2-libglade: see: gtk2
+#python27-pyhdf: HAP
+#python27-pyke: HAP
+#python27-pyparsing: HAP
+#python27-pyproj: HAP
+#python27-pyshp: HAP
+#python27-pyside: see:pyside2
+#python27-pyspharm: HAP
+#python27-pystan: HAP
+#python27-pytz: HAP
+#python27-pyugrid: HAP
+#python27-PyYAML: see:pyaml & pyyaml
+#python27-pyzmq: HAP
+#python27-requests: HAP
+#python27-rpy2: HAP
+#python27-s3transfer: HAP
+#python27-ScientificPython: see: pip:ScientificPython
+#python27-scikit-image: HAP
+#python27-scikit-learn: HAP
+#python27-scipy: HAP
+#python27-scitools-iris: see:iris
+#python27-seaborn: HAP
+#python27-setuptools: HAP
+#python27-Shapely: HAP
+#python27-singledispatch: HAP
+#python27-six: HAP
+#python27-Sphinx: HAP
+#python27-statsmodels: HAP
+#python27-sympy: HAP
+#python27-Theano: HAP
+#python27-toolz: HAP
+#python27-tornado: HAP
+#python27-tqdm: HAP
+#python27-urllib3: HAP
+#python27-virtualenv: HAP
+#python27-WebOb: HAP
+#python27-windspharm: HAP
+#python27-wxPython: HAP
+#python27-xarray: HAP
     - python=3.7
     - python-dateutil
+    - python-eccodes
+    - python-graphviz
     - pytz
     - pyugrid
+    - pyyaml
     - pyzmq
+    - qt
+#qt-devel
     - r
+#R-core: see:r
+#R-devel: see:r
+#redhat-lsb: not needed?
+    - r-coda
     - r-devtools
+    - r-rgdal
+    - r-gdalutils
     - r-ncdf4
+    - r-rjags
+    - requests
+#rjags: see:r-rjags
     - rpy2
     - s3transfer
     - scikit-learn
+    - scikit-image
     - scipy
+    - seaborn
     - setuptools
     - shapely
+    - singledispatch
     - six
     - sphinx
+    - sqlite
+#sqlite-devel
     - statsmodels
-    - sympy
+#subversion-devel
+#subversion
+#subversion-tools
+#    - sympy: FAIL: conflict
+#tcl
+#tcl-devel
+    - tcsh
+#thea: deprecated
+#umutil
+#umutil-lib
     - tensorflow
     - theano
     - tk 
+#tk-devel
+#tkdiff
     - tmux
     - toolz
     - tornado
     - tqdm
+#tree
     - udunits2
+#udunits-devel
+    - urllib3
+#uuid: deprecated at Python3?
+#uuid-devel
+    - valgrind
+#vim-enhanced
     - virtualenv
+    - webob
     - windspharm
+#wxGTK-devel
     - wxpython
     - xarray
+#xconv
+#xemacs
+    - xesmf
+    - xorg-libx11
+#xorg-x11-util-macros: see:xorg-libx11
+#xpdf
 # Pip installs
     - pip:
       - git+https://github.com/cedadev/nappy
+      - bigtiff
+#      - ccplot - Only Py2 ?
+      - cfchecker
       - f90nml
+#      - pygeode - ONLY Py2 ?
+      - pypdftk
+#      - python-ddd ???
+#      - ScientificPython - ONLY Py2?
       - simplejson
