--- a/environments/py3.8/m3-4.9.2/jaspy3.8-m3-4.9.2-r20211025/exported.yml
+++ b/environments/py3.8/m3-4.9.2/jaspy3.8-m3-4.9.2-r20211025/exported.yml
@@ -1,4 +1,4 @@
-name: buildtest_20211025
+name: buildtest_20211025b
 channels:
   - conda-forge
   - defaults
@@ -550,11 +550,13 @@ dependencies:
     - cfchecker==4.1.0
     - cfdm==1.9.0.1
     - cfunits==3.3.4
+    - configobj==5.0.6
     - ecmwf-api-client==1.6.1
     - f90nml==1.3.1
     - kaitaistruct==0.8
     - nappy==2.0.1
     - netcdf-flattener==1.2.0
+    - oggm==1.5.2
     - pipenv==2021.5.29
     - progressbar2==3.55.0
     - pygeode==1.4.0
@@ -562,4 +564,4 @@ dependencies:
     - python-utils==2.5.6
     - simplejson==3.17.5
     - virtualenv-clone==0.5.7
-prefix: /appx/jasmin/jaspy/miniconda_envs/jaspy3.7/m3-4.9.2/envs/buildtest_20211025
+prefix: /appx/jasmin/jaspy/miniconda_envs/jaspy3.7/m3-4.9.2/envs/buildtest_20211025b
