--- a/environments/py3.8/m3-4.9.2/jaspy3.8-m3-4.9.2-r20211025/initial.yml
+++ b/environments/py3.8/m3-4.9.2/jaspy3.8-m3-4.9.2-r20211025/initial.yml
@@ -205,7 +205,7 @@ dependencies:
     - nctoolkit
     - ncview
     - cmocean
-
+# also oggm pip package below
 
 #Pip installs
     - pip:
@@ -221,6 +221,7 @@ dependencies:
       - pipenv>=2020.11.15
       - pypdftk>=0.4
       - simplejson>=3.17.2
+      - oggm
 ##      - pystan>=3.1.1
 ##      - Theano>=1.0.5
 ##      - pymc3>=3.11.4
