in initial.yml add comment, and fix r-base version

--- a/environments/r4.0/jasr4.0-m3-4.9.2-r20211110/initial.yml
+++ b/environments/r4.0/jasr4.0-m3-4.9.2-r20211110/initial.yml
@@ -1,9 +1,11 @@
+# packages that are commented out have no currently available R-4 version
+# except the two with "###", which are available on conda but then fail to load in R
 name: renv
 channels:
     - conda-forge
     - defaults
 dependencies:
-    - r-base>=4.1.1
+    - r-base>=4.0.5
     - r-abind
     - r-acepack
     - r-ade4
