spectral and dask-gateway

--- a/environments/py3.9/m3-4.9.2/jaspy3.9-m3-4.9.2-r20220524/core_packages.yml
+++ b/environments/py3.9/m3-4.9.2/jaspy3.9-m3-4.9.2-r20220524/core_packages.yml
@@ -227,7 +227,9 @@ dependencies:
     - xhistogram
     - aiohttp
     - scandir
-    
+    - spectral
+    - dask-gateway
+
 #Pip installs
     - pip:
       - git+https://github.com/cedadev/nappy
