add pooch in core_packages

--- a/environments/py3.10/m3-4.9.2/jaspy3.10-m3-4.9.2-r20220624/core_packages.yml
+++ b/environments/py3.10/m3-4.9.2/jaspy3.10-m3-4.9.2-r20220624/core_packages.yml
@@ -229,6 +229,8 @@ dependencies:
     - scandir
     - spectral
     - dask-gateway
+# pooch needed for xarray tests
+    - pooch
 
 #Pip installs
     - pip:
