add jasr yml files from after adding requested packages

--- a/environments/r4.0/m3-4.9.2/jasr4.0-m3-4.9.2-r20220729/core_packages.yml
+++ b/environments/r4.0/m3-4.9.2/jasr4.0-m3-4.9.2-r20220729/core_packages.yml
@@ -1000,3 +1000,10 @@ dependencies:
     - r-zoo>=1.8_9
     - rpy2>=3.4.5
     - python==3.10.5 # USE LATEST VERSION?
+# new packs
+    - r-maps
+    - r-renv
+    - r-ggplot2
+    - r-sf
+    - r-sfheaders
+    - r-sfsmisc
