--- a/environments/r4.0/m3-4.9.2/jasr4.0-m3-4.9.2-r20220729/core_packages.yml
+++ b/environments/r4.0/m3-4.9.2/jasr4.0-m3-4.9.2-r20220729/core_packages.yml
@@ -3,6 +3,12 @@ channels:
     - conda-forge
     - defaults
 dependencies:
+#==========================================
+# force some packages to fix known issues
+#==========================================
+    - gsl=2.7=he838d99_0  # hopefully temporary workaround per https://github.com/ParBLiSS/FastANI/issues/96
+    - r-terra>=1.5_12 # raster requires this although not set up as conda dep
+#==========================================
     - r-base>=4.0.5 # USE LATEST VERSION?
     - r-abind>=1.4_5
     - r-acepack>=1.4.1
@@ -93,7 +99,7 @@ dependencies:
     - r-bsplus>=0.1.3
     - r-bwstest>=0.2.2
     - r-ca>=0.71.1
-    - r-cairo>=1.5_12.2
+    - r-cairo=1.5_12.2  ## Force exact version to try to avoid icu problem with upgrade
     - r-callr>=3.7.0
     - r-caper>=1.0.1
     - r-captioner>=2.2.3
@@ -755,7 +761,7 @@ dependencies:
     - r-rpart>=4.1_15
     - r-rpart.plot>=3.1.0
     - r-rpf>=1.0.11
-    - r-rpostgresql>=0.7_3
+#    - r-rpostgresql>=0.7_3  ## REMOVED due to mamba deps issues (try to reinstate later?)
     - r-rprojroot>=2.0.2
     - r-rrcov>=1.6_0
     - r-rredlist>=0.7.0
@@ -999,7 +1005,7 @@ dependencies:
     - r-zip>=2.2.0
     - r-zoo>=1.8_9
     - rpy2>=3.4.5
-    - python==3.10.5 # USE LATEST VERSION?
+    - python=3.10.5 # USE LATEST VERSION?
 # new packs
     - r-maps
     - r-renv
@@ -1007,3 +1013,4 @@ dependencies:
     - r-sf
     - r-sfheaders
     - r-sfsmisc
+    - r-optimx  # seems to be a test for it, not sure the history, but readding add the package
