--- a/environments/py3.11/mf3-23.11.0-0/jaspy3.11-mf3-23.11.0-0-r20240302/core_packages.yml
+++ b/environments/py3.11/mf3-23.11.0-0/jaspy3.11-mf3-23.11.0-0-r20240302/core_packages.yml
@@ -61,7 +61,7 @@ dependencies:
     - gtk2>=2.24.33
     - gxx>=13.1.0
     - gxx_linux-64>=13.1.0
-    - h5py>=3.8.0
+    - h5py>=3.8.0=mpi_openmpi*
     - hdf5>=1.12.2
     - hdfeos2>=2.20
     - hdfeos5>=5.1.16
@@ -108,7 +108,7 @@ dependencies:
     - ncview>=2.1.8
     - netcdf-cxx4>=4.3.1
     - netcdf-fortran>=4.6.0
-    - netcdf4>=1.6.2
+    - netcdf4>=1.6.2=mpi_openmpi*
     - nose>=1.3.7
     - numba>=0.57.1
     - numexpr>=2.8.4
