--- a/environments/py3.11/mf3-23.11.0-0/jaspy3.11-mf3-23.11.0-0-r20240302/initial.yml
+++ b/environments/py3.11/mf3-23.11.0-0/jaspy3.11-mf3-23.11.0-0-r20240302/initial.yml
@@ -50,7 +50,7 @@ dependencies:
   - beautifulsoup4=4.12.3=pyha770c72_0
   - binutils=2.40=hdd6e379_0
   - binutils_impl_linux-64=2.40=hf600244_0
-  - binutils_linux-64=2.40=hdade7a5_2
+  - binutils_linux-64=2.40=hbdbef99_2
   - blas=2.121=openblas
   - blas-devel=3.9.0=21_linux64_openblas
   - bleach=6.1.0=pyhd8ed1ab_0
@@ -135,7 +135,7 @@ dependencies:
   - entrypoints=0.4=pyhd8ed1ab_0
   - eofs=1.4.1=pyhd8ed1ab_1
   - esgf-pyclient=0.3.1=pyhca7485f_3
-  - esmf=8.6.0=nompi_h7b237b1_0
+  - esmf=8.6.0=mpi_openmpi_hc3b5101_0
   - esmpy=8.6.0=pyhc1e730c_0
   - et_xmlfile=1.1.0=pyhd8ed1ab_0
   - exceptiongroup=1.2.0=pyhd8ed1ab_2
@@ -172,7 +172,7 @@ dependencies:
   - gast=0.5.4=pyhd8ed1ab_0
   - gcc=13.2.0=hd6cf55c_2
   - gcc_impl_linux-64=13.2.0=h338b0a0_5
-  - gcc_linux-64=13.2.0=h1ed452b_2
+  - gcc_linux-64=13.2.0=h112eaf3_2
   - gdal=3.8.4=py311h8be719e_0
   - gdb=14.2=py311he970d7a_0
   - gdk-pixbuf=2.42.10=h829c605_5
@@ -188,7 +188,7 @@ dependencies:
   - gflags=2.2.2=he1b5a44_1004
   - gfortran=13.2.0=h98b45c4_2
   - gfortran_impl_linux-64=13.2.0=h76e1118_5
-  - gfortran_linux-64=13.2.0=h1e1a815_2
+  - gfortran_linux-64=13.2.0=hcfe307d_2
   - ghostscript=10.02.1=h59595ed_0
   - giflib=5.2.1=h0b41bf4_3
   - git=2.43.0=pl5321h7bc287a_0
@@ -216,11 +216,11 @@ dependencies:
   - gts=0.7.6=h977cf35_4
   - gxx=13.2.0=hd6cf55c_2
   - gxx_impl_linux-64=13.2.0=h338b0a0_5
-  - gxx_linux-64=13.2.0=he8deefe_2
-  - h5py=3.10.0=nompi_py311hebc2b07_101
+  - gxx_linux-64=13.2.0=hc53e3bf_2
+  - h5py=3.10.0=mpi_openmpi_py311hd572a95_1
   - harfbuzz=8.3.0=h3d44ed6_0
   - hdf4=4.2.15=h2a13503_7
-  - hdf5=1.14.3=nompi_h4f84152_100
+  - hdf5=1.14.3=mpi_openmpi_h327c9cf_0
   - hdfeos2=2.20=h3e53b52_1004
   - hdfeos5=5.1.16=hf1a501a_15
   - holoviews=1.18.3=pyhd8ed1ab_0
@@ -251,7 +251,7 @@ dependencies:
   - isort=5.13.2=pyhd8ed1ab_0
   - itsdangerous=2.1.2=pyhd8ed1ab_0
   - jags=4.3.2=hb1d968a_0
-  - jasper=4.2.1=he6dfbbe_0
+  - jasper=4.2.2=he6dfbbe_0
   - jbig=2.1=h7f98852_2003
   - jedi=0.19.1=pyhd8ed1ab_0
   - jinja2=3.1.3=pyhd8ed1ab_0
@@ -345,7 +345,7 @@ dependencies:
   - libllvm15=15.0.7=hb3ce162_4
   - libllvm17=17.0.6=hb3ce162_1
   - libmo_unpack=3.1.2=hf484d3e_1001
-  - libnetcdf=4.9.2=nompi_h9612171_113
+  - libnetcdf=4.9.2=mpi_openmpi_h958ee74_13
   - libnghttp2=1.58.0=h47da74e_1
   - libnl=3.9.0=hd590300_0
   - libnsl=2.0.1=hd590300_0
@@ -368,6 +368,7 @@ dependencies:
   - libopus=1.3.1=h7f98852_1
   - libparquet=15.0.0=h352af49_0_cpu
   - libpciaccess=0.18=hd590300_0
+  - libpnetcdf=1.12.3=mpi_openmpi_hbcf1124_1
   - libpng=1.6.43=h2797004_0
   - libpq=16.2=h33b98f1_0
   - libprotobuf=4.24.4=hf27288f_0
@@ -380,7 +381,7 @@ dependencies:
   - libsodium=1.0.18=h36c2ea0_1
   - libspatialindex=1.9.3=h9c3ff4c_4
   - libspatialite=5.1.0=h7bd4643_4
-  - libsqlite=3.45.1=h2797004_0
+  - libsqlite=3.45.2=h2797004_0
   - libssh2=1.11.0=h0841786_0
   - libstdcxx-devel_linux-64=13.2.0=ha9c7c90_105
   - libstdcxx-ng=13.2.0=h7e041cc_5
@@ -394,7 +395,7 @@ dependencies:
   - libutf8proc=2.8.0=h166bdaf_0
   - libuuid=2.38.1=h0b41bf4_0
   - libuv=1.48.0=hd590300_0
-  - libva=2.20.0=hd590300_0
+  - libva=2.21.0=hd590300_0
   - libvorbis=1.3.7=h9c3ff4c_0
   - libvpx=1.13.1=h59595ed_0
   - libwebp=1.3.2=h658648e_1
@@ -466,9 +467,9 @@ dependencies:
   - ncurses=6.4=h59595ed_2
   - ncview=2.1.8=h31cb22a_11
   - nest-asyncio=1.6.0=pyhd8ed1ab_0
-  - netcdf-cxx4=4.3.1=nompi_h53de069_108
-  - netcdf-fortran=4.6.1=nompi_hacb5139_103
-  - netcdf4=1.6.5=nompi_py311he8ad708_100
+  - netcdf-cxx4=4.3.1=mpi_openmpi_h6724935_8
+  - netcdf-fortran=4.6.1=mpi_openmpi_hc1a8302_3
+  - netcdf4=1.6.5=mpi_openmpi_py311ha5d6734_0
   - nettle=3.9.1=h7ab15ed_0
   - networkx=3.2.1=pyhd8ed1ab_0
   - nitro=2.7.dev8=h59595ed_0
@@ -504,6 +505,7 @@ dependencies:
   - panel=1.3.8=pyhd8ed1ab_0
   - pango=1.52.1=ha41ecd1_0
   - parallel=20240122=ha770c72_0
+  - parallelio=2.6.2=mpi_openmpi_h2b8e048_0
   - param=2.0.2=pyhca7485f_0
   - parso=0.8.3=pyhd8ed1ab_0
   - partd=1.4.1=pyhd8ed1ab_0
@@ -557,7 +559,7 @@ dependencies:
   - pydap=3.4.0=pyhd8ed1ab_0
   - pyflakes=3.2.0=pyhd8ed1ab_0
   - pygments=2.17.2=pyhd8ed1ab_0
-  - pygobject=3.46.0=py311h86ed371_1
+  - pygobject=3.48.1=py311h86ed371_0
   - pygrib=2.1.5=py311hbe899fa_1
   - pyhdf=0.11.3=py311ha36aa4f_2
   - pyjwt=2.8.0=pyhd8ed1ab_1
@@ -657,7 +659,7 @@ dependencies:
   - sphinxcontrib-qthelp=1.0.7=pyhd8ed1ab_0
   - sphinxcontrib-serializinghtml=1.1.10=pyhd8ed1ab_0
   - sqlalchemy=2.0.28=py311h459d7ec_0
-  - sqlite=3.45.1=h2c6b66d_0
+  - sqlite=3.45.2=h2c6b66d_0
   - stack_data=0.6.2=pyhd8ed1ab_0
   - statsmodels=0.14.1=py311h1f0f07a_0
   - suitesparse=5.10.1=h5a4f163_3
@@ -687,7 +689,7 @@ dependencies:
   - toolz=0.12.1=pyhd8ed1ab_0
   - tornado=6.4=py311h459d7ec_0
   - tqdm=4.66.2=pyhd8ed1ab_0
-  - traitlets=5.14.1=pyhd8ed1ab_0
+  - traitlets=5.14.2=pyhd8ed1ab_0
   - traittypes=0.2.1=pyh9f0ad1d_2
   - trollimage=1.23.1=py311h320fe9a_0
   - trollsift=0.5.1=pyhd8ed1ab_0
