Jasr: add ocl-icd-system in core packages; generate new initial.yml; rename release (tests pass)

--- a/environments/r4.3/mf3-23.11.0-0/jasr4.3-mf3-23.11.0-0-r20240320/core_packages.yml
+++ b/environments/r4.3/mf3-23.11.0-0/jasr4.3-mf3-23.11.0-0-r20240320/core_packages.yml
@@ -1007,4 +1007,5 @@ dependencies:
     - r-zoo>=1.8_12
     - rpy2>=3.5.11
     - python>=3.11.4 # USE LATEST VERSION?
+    - ocl-icd-system
 # new packs
