--- a/environments/py3.12/mf3-25.3.0-3/jaspy3.12-mf3-25.3.0-3-v20250621/core_packages.yml
+++ b/environments/py3.12/mf3-25.3.0-3/jaspy3.12-mf3-25.3.0-3-v20250621/core_packages.yml
@@ -32,12 +32,8 @@ dependencies:
     - cython>=3.0.11
     - dask-gateway>=2024.1.0
     #=============================
-    # Pinning dask for now for compatibility with cf-python 3.17.0
-    # but 3.18.0, due out in first half of June, will not require this.
-    # So probably will be removing the <= pin before release.
-    #
-    #- dask>=2024.8.0
-    - dask>=2025.2.0,<=2025.3.0
+    # dask version range matches what cf-python wants
+    - dask>=2025.5.1
     #=============================
     - descartes>=1.1.0
     - eccodes>=2.36.0
@@ -81,9 +77,7 @@ dependencies:
     - idna>=3.7
     - ilamb>=2.7
     - imagehash>=4.3.1
-    - imagemagick>=7.1.1_29
-    - intake-esm>=2024.2.6
-    - intake-xarray>=0.7.0
+    #- intake-esm>=2024.2.6
     - ipyleaflet>=0.19.2
     - ipython>=8.26.0
     - iris-grib>=0.19.0
@@ -95,7 +89,6 @@ dependencies:
     - jmespath>=1.0.1
     - joblib>=1.4.2
     - jug>=2.3.1
-    - keras>=2.15.0
     - kiwisolver>=1.4.5
     - lapack>=3.9.0
     - latexcodec>=2.0.1
@@ -134,7 +127,6 @@ dependencies:
     - packaging>=23.2
     - pandas>=2.2.2
     - parallel>=20240722
-    #- parcels>=3.0.4
     - partd>=1.4.2
     - patsy>=0.5.6
     - pep8>=1.7.1
@@ -202,8 +194,6 @@ dependencies:
     - statsmodels>=0.14.2
     - sympy>=1.13.2
     - tcsh>=6.24.10
-    - tensorflow>=2.18.0
-    ###- tensorflow-estimator>=2.18.0
     - tk>=8.6.13
     - tmux>=3.4
     - toolz>=0.12.1
@@ -232,6 +222,21 @@ dependencies:
 # then they should be considered permanently removed and the comment
 # can be removed also.
 #
+#
+#  tensorflow-estimator>=2.18.0
+#    - Could not be imported.  Apparently no longer a requirement because
+#      people will tend to use their own envs for this.
+#
+#  tensorflow>=2.18.0
+#    - Causes tensorflow-estimator to be installed for deps
+#
+#  keras>=2.15.0
+#    - requires tensorflow
+#
+#  imagemagick>=7.1.1_29
+#    - the "display" command is broken; ImageMagick is provided via
+#      jasmin-sci
+#
 #  NOSE removed - not Python 3.12 compatible
 #    (uses "imp" that was removed from python standard library)
 #    - nose>=1.3.7
@@ -258,13 +263,13 @@ dependencies:
 #============================================================
 # New packages for this release (no previous version, hence no version numbers here,
 # but should be given >= version numbers next time)
-
+    - zarr>=3
 
 #Pip installs
     - pip:
       - bigtiff>=0.1.2
       - cf-plot>=3.3.0
-      - cf-python>=3.16.2
+      - cf-python>=3.18.0
       - cfchecker>=4.1.0
       - ecmwf-api-client>=1.6.3
       - f90nml>=1.4.4
@@ -289,4 +294,8 @@ dependencies:
       # parcels moved to pip package, because the conda package requires
       # "c-compiler" which breaks the gcc package
       - parcels>=3.0.4
-
+      # intake packages moved to pip section, because with the conda install,
+      # intake_xarray does not import cleanly
+      - intake>=2.0.8
+      - intake-xarray>=0.7.0
+      - intake-esm>=2023.11.10
