--- a/environments/py3.12/mf3-25.3.0-3/jaspy3.12-mf3-25.3.0-3-v20250621/core_packages.yml
+++ b/environments/py3.12/mf3-25.3.0-3/jaspy3.12-mf3-25.3.0-3-v20250621/core_packages.yml
@@ -18,7 +18,7 @@ dependencies:
     - botocore>=1.34.162
     - cartopy>=0.23.0
     - cdo>=2.4.0
-    - cdsapi>=0.7.0
+    - cdsapi>=0.7.6
     - certifi>=2024.7.4
     - cf-units>=3.2.0
     - cfgrib>=0.9.14.0
@@ -264,7 +264,13 @@ dependencies:
 # New packages for this release (no previous version, hence no version numbers here,
 # but should be given >= version numbers next time)
     - zarr>=3
-
+    - flox
+    - tropycal
+    - gcsfs
+    - kerchunk>=0.2.8
+    - pystac-client
+    - xdoctest
+          
 #Pip installs
     - pip:
       - bigtiff>=0.1.2
@@ -289,7 +295,7 @@ dependencies:
       # patch for pyspharm on cedadev now merged into master but not yet a
       # tagged release published on pypi
       - git+https://github.com/jswhit/pyspharm.git
-      - windspharm>=1.7.0
+      - windspharm>=2.0.0
       - cf_view>=3.2.25
       # parcels moved to pip package, because the conda package requires
       # "c-compiler" which breaks the gcc package
@@ -299,3 +305,8 @@ dependencies:
       - intake>=2.0.8
       - intake-xarray>=0.7.0
       - intake-esm>=2023.11.10
+      - huracanpy
+#      - ceda-datapoint
+      - git+https://github.com/alaniwi/ArrayPartition.git@relax_deps
+      - git+https://github.com/cedadev/CFAPyX.git@relax_deps
+      - git+https://github.com/cedadev/datapoint.git@relax_deps
