new core_packages.yml that uses fixed ceda-datapoint on PyPI instead of branch; also add ibicus that was missed

--- a/environments/py3.12/mf3-25.3.0-3/jaspy3.12-mf3-25.3.0-3-v20250621/core_packages.yml
+++ b/environments/py3.12/mf3-25.3.0-3/jaspy3.12-mf3-25.3.0-3-v20250621/core_packages.yml
@@ -306,7 +306,5 @@ dependencies:
       - intake-xarray>=0.7.0
       - intake-esm>=2023.11.10
       - huracanpy
-#      - ceda-datapoint
-      - git+https://github.com/alaniwi/ArrayPartition.git@relax_deps
-      - git+https://github.com/cedadev/CFAPyX.git@relax_deps
-      - git+https://github.com/cedadev/datapoint.git@relax_deps
+      - ibicus
+      - ceda-datapoint
