comment out the  _x86_64-microarch-level in initial.yml

--- a/environments/py3.12/mf3-25.3.0-3/jaspy3.12-mf3-25.3.0-3-v20250704/initial.yml
+++ b/environments/py3.12/mf3-25.3.0-3/jaspy3.12-mf3-25.3.0-3-v20250704/initial.yml
@@ -4,7 +4,7 @@ channels:
 dependencies:
   - _libgcc_mutex=0.1=conda_forge
   - _openmp_mutex=4.5=2_gnu
-  - _x86_64-microarch-level=4=2_x86_64_v4
+    #  - _x86_64-microarch-level=4=2_x86_64_v4
   - adwaita-icon-theme=48.1=unix_0
   - affine=2.4.0=pyhd8ed1ab_1
   - aiobotocore=2.23.0=pyhd8ed1ab_0
